# augment-oauth-service

./: .env  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  install.sh  release.sh  start.sh  uninstall.sh
.github/: RELEASE_TEMPLATE.md
.github/workflows/: changelog.yml  release.yml  test-changelog.yml
docs/: API.md  CHANGELOG_AUTOMATION.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md
scripts/: changelog.ps1  generate-changelog.ps1  generate-changelog.sh  setup-git-hooks.sh
src/: config.rs  handlers.rs  main.rs  middleware.rs  models.rs  oauth.rs
